USE DW_COMERCIAL;


-- CREACIÓN TABLAS DIM_PRODUCTO

-- STG
CREATE TABLE STG_DIM_PRODUCTO
(
	DESC_PRODUCTO VARCHAR(500),
	COD_PRODUCTO VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_PRODUCTO
(
	COD_PRODUCTO VARCHAR(500),
	DESC_PRODUCTO VARCHAR(500)
)

-- DIM
CREATE TABLE DIM_PRODUCTO
(
	PRODUCTO_KEY INT IDENTITY(1,1),
	COD_PRODUCTO VARCHAR(500),
	DESC_PRODUCTO VARCHAR(500), 
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimProducto PRIMARY KEY (PRODUCTO_KEY)
)


-- CREACIÓN TABLAS DIM_CATEGORIA

-- STG
CREATE TABLE STG_DIM_CATEGORIA
(
	DESC_CATEGORIA VARCHAR(500),
	COD_CATEGORIA VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_CATEGORIA
(
	COD_CATEGORIA VARCHAR(500),
	DESC_CATEGORIA VARCHAR(500)
)

-- DIM
CREATE TABLE DIM_CATEGORIA
(
	CATEGORIA_KEY INT IDENTITY(1,1),
	COD_CATEGORIA VARCHAR(500),
	DESC_CATEGORIA VARCHAR(500),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_CATEGORIA DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_CATEGORIA DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimCategoria PRIMARY KEY (CATEGORIA_KEY)
)


-- CREACIÓN TABLAS DIM_CLIENTE

-- STG
CREATE TABLE STG_DIM_CLIENTE
(
	DESC_CLIENTE VARCHAR(500),
	COD_CLIENTE VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_CLIENTE
(
	COD_CLIENTE VARCHAR(500),
	NOMBRE VARCHAR(500),
	APELLIDO VARCHAR(500),
)

-- DIM
CREATE TABLE DIM_CLIENTE
(
	CLIENTE_KEY INT IDENTITY(1,1),
	COD_CLIENTE VARCHAR(500),
	NOMBRE VARCHAR(500),
	APELLIDO VARCHAR(500),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_CLIENTE DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_CLIENTE DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimCliente PRIMARY KEY (CLIENTE_KEY)
)


-- CREACIÓN TABLAS DIM_PAIS

-- STG
CREATE TABLE STG_DIM_PAIS
(
	DESC_PAIS VARCHAR(500),
	COD_PAIS VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_PAIS
(
	COD_PAIS VARCHAR(3),
	DESC_PAIS VARCHAR(500)
)

-- DIM
CREATE TABLE DIM_PAIS
(
	PAIS_KEY INT IDENTITY(1,1),
	COD_PAIS VARCHAR(3),
	DESC_PAIS VARCHAR(500),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_PAIS DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_PAIS DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimPais PRIMARY KEY (PAIS_KEY)
)


-- CREACIÓN TABLAS DIM_VENDEDOR

-- STG
CREATE TABLE STG_DIM_VENDEDOR
(
	DESC_VENDEDOR VARCHAR(500),
	COD_VENDEDOR VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_VENDEDOR
(
	COD_VENDEDOR VARCHAR(500),
	NOMBRE VARCHAR(500),
	APELLIDO VARCHAR(500)
)

-- DIM
CREATE TABLE DIM_VENDEDOR
(
	VENDEDOR_KEY INT IDENTITY(1,1),
	COD_VENDEDOR VARCHAR(500),
	NOMBRE VARCHAR(500),
	APELLIDO VARCHAR(500),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_VENDEDOR DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_VENDEDOR DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimVendedor PRIMARY KEY (VENDEDOR_KEY)
)


-- CREACIÓN TABLAS DIM_SUCURSAL

-- STG
CREATE TABLE STG_DIM_SUCURSAL
(
	DESC_SUCURSAL VARCHAR(500),
	COD_SUCURSAL VARCHAR(500)
)

-- INT
CREATE TABLE INT_DIM_SUCURSAL
(
	COD_SUCURSAL VARCHAR(500),
	DESC_SUCURSAL VARCHAR(500)
)

-- DIM
CREATE TABLE DIM_SUCURSAL
(
	SUCURSAL_KEY INT IDENTITY(1,1),
	COD_SUCURSAL VARCHAR(500),
	DESC_SUCURSAL VARCHAR(500),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_SUCURSAL DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_SUCURSAL DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimSucursal PRIMARY KEY (SUCURSAL_KEY)
)


-- CREACIÓN TABLA DIM_TIEMPO

-- DIM
CREATE TABLE DIM_TIEMPO
(
	TIEMPO_KEY SMALLDATETIME, --hace referencia al dia
	ANIO INT,
	MES_NRO INT, 
	MES_NOMBRE VARCHAR(15),
	SEMESTRE INT,
	TRIMESTRE INT, 
	SEMANA_ANIO INT,
	SEMANA_NRO_MES INT,
	DIA INT,
	DIA_NOMBRE VARCHAR(20),
	DIA_SEMANA_NRO INTEGER,
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_DIM_TIEMPO DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_DIM_TIEMPO DEFAULT SYSTEM_USER,
	FECHA_UPDATE DATETIME,
	USUARIO_UPDATE VARCHAR(500)

	CONSTRAINT PK_DimTiempo PRIMARY KEY (TIEMPO_KEY)
)


-- CREACIÓN TABLAS FACT_VENTAS

-- STG
CREATE TABLE STG_FACT_VENTAS
(
	COD_PRODUCTO VARCHAR(500),
	COD_CATEGORIA VARCHAR(500),
	COD_CLIENTE VARCHAR(500),
	COD_PAIS VARCHAR(500),
	COD_VENDEDOR VARCHAR(500),
	COD_SUCURSAL VARCHAR(500),
	FECHA VARCHAR(500),
	CANTIDAD_VENDIDA VARCHAR(500),
	MONTO_VENDIDO VARCHAR(500),
	PRECIO VARCHAR(500),
	COMISION_COMERCIAL VARCHAR(500)
)

-- INT
CREATE TABLE INT_FACT_VENTAS
(
	COD_PRODUCTO VARCHAR(100),
	COD_CATEGORIA VARCHAR(100),
	COD_CLIENTE VARCHAR(100),
	COD_PAIS VARCHAR(100),
	COD_VENDEDOR VARCHAR(100),
	COD_SUCURSAL VARCHAR(100),
	Fecha SMALLDATETIME,
	CANTIDAD_VENDIDA DECIMAL(18,2),
	MONTO_VENDIDO DECIMAL(18,2),
	PRECIO DECIMAL(18,2),
	COMISION_COMERCIAL DECIMAL(18,2)
)

-- DIM
CREATE TABLE FACT_VENTAS
(
	PRODUCTO_KEY INT,
	CATEGORIA_KEY INT,
	CLIENTE_KEY INT,
	PAIS_KEY INT,
	VENDEDOR_KEY INT,
	SUCURSAL_KEY INT,
	TIEMPO_KEY SMALLDATETIME,
	CANTIDAD_VENDIDA DECIMAL(18,2),
	MONTO_VENDIDO DECIMAL(18,2),
	PRECIO DECIMAL(18,2),
	COMISION_COMERCIAL DECIMAL(18,2),
	FECHA_ALTA DATETIME NOT NULL CONSTRAINT DF_FECHA_ALTA_FACT_VENTAS DEFAULT GETDATE(),
	USUARIO_ALTA VARCHAR(500) NOT NULL CONSTRAINT DF_USUARIO_ALTA_FACT_VENTAS DEFAULT SYSTEM_USER

	-- Agregada PK compuesta
	CONSTRAINT PK_FactVentas PRIMARY KEY 
	(
		PRODUCTO_KEY,			
		CATEGORIA_KEY,			
		CLIENTE_KEY,		
		PAIS_KEY,		
		VENDEDOR_KEY,		
		SUCURSAL_KEY,
		TIEMPO_KEY	
	)
)
-- Agregando las llaves foráneas a la FACT
USE DW_COMERCIAL

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimProducto 
	FOREIGN KEY (PRODUCTO_KEY) REFERENCES DIM_PRODUCTO(PRODUCTO_KEY);

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimCategoria
	FOREIGN KEY (CATEGORIA_KEY) REFERENCES DIM_CATEGORIA(CATEGORIA_KEY);

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimCliente
	FOREIGN KEY (CLIENTE_KEY) REFERENCES DIM_CLIENTE(CLIENTE_KEY);

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimPais
	FOREIGN KEY (PAIS_KEY) REFERENCES DIM_PAIS(PAIS_KEY);	

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimVendedor 
	FOREIGN KEY (VENDEDOR_KEY) REFERENCES DIM_VENDEDOR(VENDEDOR_KEY);

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimSucursal 
	FOREIGN KEY (SUCURSAL_KEY) REFERENCES DIM_SUCURSAL(SUCURSAL_KEY);

ALTER TABLE dbo.[FACT_VENTAS]
ADD CONSTRAINT FK_FactVentas_DimTiempo 
	FOREIGN KEY (TIEMPO_KEY) REFERENCES DIM_TIEMPO(TIEMPO_KEY);

GO

-- CREACION TRIGGERS PARA CAMPOS 'FECHA_UPDATE', 'USUARIO_UPDATE' 
-- EN LAS TABLAS DE DIMENSION

CREATE TRIGGER tr_dim_producto_update
ON DIM_PRODUCTO
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_PRODUCTO
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.PRODUCTO_KEY = DIM_PRODUCTO.PRODUCTO_KEY
END; 
GO

CREATE TRIGGER tr_dim_categoria_update
ON DIM_CATEGORIA
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_CATEGORIA
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.CATEGORIA_KEY = DIM_CATEGORIA.CATEGORIA_KEY
END; 
GO

CREATE TRIGGER tr_dim_cliente_update
ON DIM_CLIENTE
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_CLIENTE
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.CLIENTE_KEY = DIM_CLIENTE.CLIENTE_KEY
END; 
GO

CREATE TRIGGER tr_dim_pais_update
ON DIM_PAIS
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_PAIS
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.PAIS_KEY = DIM_PAIS.PAIS_KEY
END; 
GO

CREATE TRIGGER tr_dim_sucursal_update
ON DIM_SUCURSAL
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_SUCURSAL
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.SUCURSAL_KEY = DIM_SUCURSAL.SUCURSAL_KEY
END; 
GO

CREATE TRIGGER tr_dim_vendedor_update
ON DIM_VENDEDOR
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_VENDEDOR
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.VENDEDOR_KEY = DIM_VENDEDOR.VENDEDOR_KEY
END; 
GO

CREATE TRIGGER tr_dim_tiempo_update
ON DIM_TIEMPO
AFTER UPDATE
AS
BEGIN
	SET NOCOUNT ON;

	UPDATE DIM_TIEMPO
	SET FECHA_UPDATE = GETDATE(),
		USUARIO_UPDATE = SYSTEM_USER
	FROM inserted AS i
	WHERE i.TIEMPO_KEY = DIM_TIEMPO.TIEMPO_KEY
END; 
GO


-- CREACIÓN DE FUNCIONES
CREATE FUNCTION fn_extrae_primeros_nombres 
-- Extrae las primeras 'n-1' palabras de una cadena con 'n' palabras.
-- Ej: fn_extrae_primeros_nombres('Ana Maria Martinez') => 'Ana Maria'.
(
	@NombreCompleto AS VARCHAR(500)
)
RETURNS VARCHAR(500)
AS
BEGIN
	DECLARE @Nombres AS VARCHAR(500)

SET @Nombres = SUBSTRING
(
	@NombreCompleto, 1, 
	LEN(@NombreCompleto) - CHARINDEX(' ', REVERSE(@NombreCompleto))
)
	RETURN @Nombres

END
GO


CREATE FUNCTION fn_extrae_apellido 
-- Extrae la ultima palabra de una cadena.
-- Ej: fn_extrae_primeros_nombres('Ana Maria Martinez') => 'Martinez'.
(
	@NombreCompleto AS VARCHAR(500)
)
RETURNS VARCHAR(500)
AS
BEGIN
	DECLARE @Apellido AS VARCHAR(500)

SET @Apellido = SUBSTRING
(
	@NombreCompleto, 
	LEN(@NombreCompleto) - CHARINDEX(' ', REVERSE(@NombreCompleto)) + 2,
	LEN(@NombreCompleto)
)
	RETURN @Apellido
	
END
GO